--- a/Backend/package.json
+++ b/Backend/package.json
@@ -25,6 +25,7 @@
     "express": "^4.17.2",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
+    "mysql": "^2.18.1",
     "request-promise": "^4.2.6",
     "socket.io": "^4.4.1",
     "ts-node": "^10.5.0"
